@@ -3,18 +3,18 @@
                                       
      _________________________________________________________________
                                       
-   Here are some things that still need to be done.
+   Here are some things that still need to be done and ideas for possible
+   future things to do.
+   
      * Fixing the PATH_TRANSLATED support
      * HTML version of cgiwrapd instead of text/plain
      * More flexible approach to user directory mapping - rewrite file,
        mapping dir to user instead of user to dir
      * Limiting script execution based on load average.
      * Allow setting any environment variable from CGIwrap
-     * use SERVER_ADMIN
-     * add a "--with-cgiwrap-admin=email-address" option
-     * add a "--with-cgiwrap-docs=URL" option
-     * add a "--with-local-docs=URL"
+     * finish the request info section of the error output
+     * use SERVER_ADMIN and other http variables.
      * if you disable httpd user checking - you need to make sure to
        define the installation group to be the group that the server is
-       runnig as
+       running as - and be sure and restrict permissions.
      * Continue creating global context for storage of data
