@@ -19,11 +19,12 @@ CGIwrap will work with AFS, with at least the following directory permissions:
 		<TD ALIGN=CENTER>rl</TD></TR>
 </TABLE></CENTER>
 <P>
-If you are running httpd authenticated to AFS, you can replace 
+If you are running httpd authenticated as an AFS userid, you can replace 
 system:anyuser above with that userid.
 <P>
 If you are using CGIWrap with AFS I'd suggest making sure to enable the
-AFS PAG support in the Configure script. This automatically creates a PAG
+AFS support in the configure script (--with-afs). This automatically 
+creates a PAG
 for any script that is launched, that way if the script klogs, it won't
 affect the server or other scripts. When using cgiwrap with AFS based
 accounts, you need to keep in mind that scripts are run un-authenticated.
