@@ -2,8 +2,9 @@
 <CENTER><H2>CGIWrap - To Do</H2></CENTER>
 <HR>
 
-Here are some things that still need to be done.
-
+Here are some things that still need to be done and ideas for
+possible future things to do.
+<P>
 <UL>
 	<LI>Fixing the PATH_TRANSLATED support
 	<LI>HTML version of cgiwrapd instead of text/plain
@@ -12,14 +13,12 @@ file, mapping dir to user instead of user to dir
 	<LI>Limiting script execution based on load average.
         <LI>Allow setting any environment variable from CGIwrap
 
-<LI>use SERVER_ADMIN
-
-<LI>add a "--with-cgiwrap-admin=email-address" option
-<LI>add a "--with-cgiwrap-docs=URL" option
-<LI>add a "--with-local-docs=URL"
+<LI>finish the request info section of the error output
+<LI>use SERVER_ADMIN and other http variables.
 
 <LI>if you disable httpd user checking - you need to make sure to define the 
-installation group to be the group that the server is runnig as
+installation group to be the group that the server is running as - and be sure
+and restrict permissions.
 
 <LI>Continue creating global context for storage of data
 
